crates/oxc_react_compiler/tests/snapshots/new-mutability__basic-mutation-via-function-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/basic-mutation-via-function-expression.js
---
import { c as _c } from "react/compiler-runtime";
// @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(3);
	const { a, b } = t0;
	let t1;
	if ($[0] !== a || $[1] !== b) {
		const x = { a };
		const y = [b];
		const f = () => {
			y.x = x;
			mutate(y);
		};
		f();
		t1 = <div>{x}</div>;
		$[0] = a;
		$[1] = b;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
