crates/oxc_react_compiler/tests/snapshots/new-mutability__capture-in-function-expression-indirect.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/capture-in-function-expression-indirect.js
---
import { c as _c } from "react/compiler-runtime";
import { Stringify, mutate } from "shared-runtime";
function Component(t0) {
	const $ = _c(3);
	const { foo, bar } = t0;
	let t1;
	if ($[0] !== bar || $[1] !== foo) {
		const x = { foo };
		const y = { bar };
		const f0 = function() {
			const a = { y };
			const b = { x };
			a.y.x = b;
		};
		f0();
		mutate(y);
		t1 = <Stringify x={y} />;
		$[0] = bar;
		$[1] = foo;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		foo: 2,
		bar: 3
	}],
	sequentialRenders: [
		{
			foo: 2,
			bar: 3
		},
		{
			foo: 2,
			bar: 3
		},
		{
			foo: 2,
			bar: 4
		},
		{
			foo: 3,
			bar: 4
		}
	]
};
